--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Skystedt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>:root{background:black}</style>
+    <meta name="description" content="Skystedt">
+    <style>:root, html, body{background:black}</style>
   </head>
-  <body></body>
+  <body>
+    <h1 style="position: fixed; top: 0; left: 0;">%nbsp;</h1>
+  </body>
 </html>
