--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Skystedt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Skystedt">
     <style>:root{background:black}</style>
   </head>
   <body></body>
