- ESLint - Prettier - EditorConfig

--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Skystedt</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Skystedt">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Skystedt" />
+    <!-- prettier-ignore -->
     <style>:root{background:black}</style>
   </head>
   <body></body>
