--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background: black">
   <head>
     <meta charset="utf-8" />
     <title>Skystedt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Skystedt" />
-    <!-- prettier-ignore -->
-    <style>:root{background:black}</style>
   </head>
   <body></body>
 </html>
