--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="background: black">
+<html lang="en" style="background: darkred">
   <head>
     <meta charset="utf-8" />
     <title>Skystedt</title>
