--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en" style="background: black">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="Content-Security-Policy" />
     <title>Skystedt</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Skystedt" />
