--- a/src/client/src/index.html
+++ b/src/client/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" style="background: black">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="Content-Security-Policy" />
     <title>Skystedt</title>
+    <!-- prettier-ignore -->
+    <style>html{background:black}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Skystedt" />
   </head>
